<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oh NO!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="insert_contacts">Insert Contacts</string>
    <string name="saved_messages">Save Messages</string>
    <string name="preset_messages">Preset Messages</string>
    <string name="inbox">Inbox</string>
     <string name="new_message">New Message</string>
    <string name="create_blocklist"> Blocklist</string>
    <string name="Facebook_friend_BirthDays">Facebook Friend BirthDays</string>
    <string name="Facebook_friend_login_text">Press the login button to get Syncronize facebook friend Birthdays</string>
    <string name="app_id">304156206399452</string>
    

</resources>