<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/insert_contact"
        android:showAsAction="always"
        android:title="@string/insert_contacts"/>
    <item
        android:id="@+id/saved_messages"
        android:showAsAction="always"
        android:title="@string/saved_messages"/>
    <item
        android:id="@+id/preset_messages"
        android:showAsAction="ifRoom"
        android:title="@string/preset_messages"/>
     <item
        android:id="@+id/create_blocklist"
        android:showAsAction="ifRoom"
        android:title="@string/create_blocklist"/>
    

</menu>